# client-portal-aw

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-entrypoint.sh  pyproject.toml  railway.json  run.py
.github/workflows/: ci.yml
app/: __init__.py  audit.py  config.py  extensions.py  models.py
app/auth/: __init__.py  forms.py  routes.py
app/calc/: __init__.py  engine.py
app/clients/: __init__.py  forms.py  routes.py
app/main/: __init__.py  routes.py
app/pdf/: __init__.py  common.py  orchestrator.py  sacs.py  tcc.py  theme.py
app/reports/: __init__.py  forms.py  routes.py  services.py
app/static/css/: app.css
app/static/js/: main.js  report-entry.js
app/team/: __init__.py  forms.py  routes.py
app/templates/: base.html
app/templates/auth/: login.html
app/templates/clients/: _form.html  detail.html  edit.html  list.html  new.html  placeholder.html
app/templates/errors/: 403.html  404.html  500.html
app/templates/main/: audit_log.html  index.html
app/templates/reports/: _balance_row.html  detail.html  index.html  new.html  placeholder.html
app/templates/team/: index.html
migrations/versions/: 344a245f4917_initial_schema.py
scripts/: backup_db.py  bootstrap_admin.py  pdf_preview.py  seed.py
tests/: conftest.py  test_audit_log.py  test_calc_engine.py  test_clients.py  test_history.py  test_reports.py  test_sacs_pdf.py  test_smoke.py  test_tcc_pdf.py  test_team.py
